[package]
name = "rust_momentkh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
phf = { version = "0.11", default-features = false }
phf_macros = "0.11.1"
strum = "0.24.1"
strum_macros = "0.24.3"
